# ffmpeg-learning

./: .gitignore  CMakeLists.txt
include/: config.h  config.h.in  video_debug.h  video_debugging.h  video_process.h
ref/: hello_world.cpp  remuxing.cpp  transcoding.cpp  video_debugging.cpp  video_debugging.h
src/: CMakeLists.txt  main.cpp
src/helloworld/: CMakeLists.txt  main.cpp
src/probe/: CMakeLists.txt  main.cpp
src/remux/: CMakeLists.txt  main.cpp
src/remuxing/: CMakeLists.txt  main.cpp
src/transcode/: CMakeLists.txt  main.cpp  video_debug.cpp  video_process.cpp
src/transcoding/: CMakeLists.txt  transcoding.cpp
